k8s/policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata: { name: user-service-grpc-authz, namespace: blogmesh }
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: user-service-grpc
  requiredAuthenticationRefs:
    - { group: policy.linkerd.io, kind: MeshTLSAuthentication, name: user-service-clients }
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata: { name: auth-service-grpc-authz, namespace: blogmesh }
spec:
  targetRef: { group: policy.linkerd.io, kind: Server, name: auth-service-grpc }
  requiredAuthenticationRefs:
    - { group: policy.linkerd.io, kind: MeshTLSAuthentication, name: auth-service-clients }
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata: { name: post-service-grpc-authz, namespace: blogmesh }
spec:
  targetRef: { group: policy.linkerd.io, kind: Server, name: post-service-grpc }
  requiredAuthenticationRefs:
    - { group: policy.linkerd.io, kind: MeshTLSAuthentication, name: post-service-clients }
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata: { name: search-service-grpc-authz, namespace: blogmesh }
spec:
  targetRef: { group: policy.linkerd.io, kind: Server, name: search-service-grpc }
  requiredAuthenticationRefs:
    - { group: policy.linkerd.io, kind: MeshTLSAuthentication, name: search-service-clients }
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata: { name: notification-service-http-authz, namespace: blogmesh }
spec:
  targetRef: { group: policy.linkerd.io, kind: Server, name: notification-service-http }
  requiredAuthenticationRefs:
    - { group: policy.linkerd.io, kind: MeshTLSAuthentication, name: notification-service-clients }
